<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>DeepLeishmaniaScan</groupId>
	<artifactId>DeepLeishmaniaScan</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<dependencies>

		<!-- json utils by google -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>
		<!-- json utils by google -->

		<!-- log4j, slf4j -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.8</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.8</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.21</version>
		</dependency>
		<!-- log4j, slf4j -->


		<!-- https://mvnrepository.com/artifact/commons-io/commons-io apache commons 
			io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io apache commons 
			io -->
		<!-- openimag image processing -->
		<dependency>
			<artifactId>image-processing</artifactId>
			<groupId>org.openimaj</groupId>
			<version>1.3.5</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<artifactId>core-tool</artifactId>
			<groupId>org.openimaj.tools</groupId>
			<version>1.3.5</version>
			<scope>compile</scope>
		</dependency>


	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>